# internal/delivery/rest/rest.go
@@ -55,7 +55,7 @@ func (s *service) initV1Routes() {
 	s.v1.POST("/childern", s.HandleRegisterChildern(), s.AuthMiddleware(true, false))
 	s.v1.PUT("/childern/:child_id", s.HandleUpdateChildern())
 	s.v1.GET("/childern", s.HandleGetMyChildern(), s.AuthMiddleware(true, false))
-	s.v1.GET("/childern/search", s.HandleSearchChildern())
+	s.v1.GET("/childern/search", s.HandleSearchChildern(), s.AuthMiddleware(false, true))
 	s.v1.GET("/childern/:child_id/stats", s.HandleGetChildStats())
 
 	s.v1.GET("/atec/questionnaires", s.HandleGetATECQuestionaire())
